
*****************************
   MyBlitzortung Changelog
*****************************

Version 0.7.3a-dev
------------------
- new: drawing of hyperbolic curves - you can see how locating is done

Version 0.7.3 (2011-10-05)
--------------------------
- IMPORTANT: changed some database keys (NOTE: Update can take several minutes)
- new: Hungarian translation (by Gabor)
- new: kml overlays on dynamic map
- new: kml output to display maps in google earth
- new: mouseover on signal graphs to zoom in
- new: BO_RADIUS_STAT for statistics
- new: stations under construction
- new: more strike locating info
- new: some special effects ;-)
- new: possibility to add no-cookie domain
- fix: windroses
- fix: another strike duplicate issue
- graph colors adjusted (blue = lightning ...)
- changes behaviour of session closing
- cleanups, other fixes, small improvements

Version 0.7.2b (2011-09-15)
---------------------------
- fix: now working with "best channel mode"
- fix: transparency and font issues with bundled or newer PHP-GD versions
- improved partial strike downloads again
- some other minor fixes and improvements

Version 0.7.2a (2011-09-12)
---------------------------
- added some more overlay templates for dynamic map
- fix: sometimes transparency not working
- fix: manual time range in dynamic map broken
- fix: font problems with strike counter in dynamic map (untested!)
- using freetype2 by default (change with BO_FONT_USE_FREETYPE2 -> false)

Version 0.7.2 (2011-09-09)
--------------------------
- new: deletion of old stations from station database
- new: added support of jpg and gif map files
- new: using "If-Modified" header for strike download
- new: use map image by time (i.e. for animations with satellite images) - thx to oh6mqm
- new: force default language in maps (not so much load with cache)
- new: show participated users in strike info (when logged-in)
- new: show user and station-id in list (when logged-in)